syntax = "proto3";

package booking.events;
option java_multiple_files = true;

message ReleaseSeatsEvent{
  int64 eventId = 1;
  int32 seats = 2;
}
