syntax = "proto3";

package event.events;
option java_multiple_files = true;

message EventCreatedKafkaEvent{
  int64 eventId = 1;
  int32 totalSeats = 2;
  string eventType = 3;
}

message EventSeatsUpdatedKafkaEvent{
  int64 eventId = 1;
  int32 totalSeats = 2;
}

message EventDeletedKafkaEvent{
  int64 eventId = 1;
}

message EventPriceKafkaEvent{
  int64 eventId = 1;
  double basePrice = 2;
  string eventCategory = 3;
}